newsprint: fix paragraph spacing on small screens

--- a/static/css/newsprint.css
+++ b/static/css/newsprint.css
@@ -159,7 +159,8 @@ body section.content article.thumb {
 	}
 
 	p {
-		margin: 0 0.5rem;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
 	}
 
 	header .next, header .prev {
